@@ -8,6 +8,7 @@
 * Implemented additional parsing methods to the Color class.
 * Added unit tests for LSPString and Color classes.
 * Renamed invalid resolve_entity() method to set_value() method for xml::PullParser.
+* Added TT_COMMA token to expr:Tokenizer.
 
 === 0.5.1 ===
 * Added Color class.
